# discovery-zero

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  verified_code_library.json
docs/: ARCHITECTURE_ZH.md  BENCHMARK_COMMANDS.md  WALKTHROUGH_ZH.md
docs/plans/: 2026-03-01-discovery-zero-design.md  2026-03-01-discovery-zero-implementation.md
dz-modules/: README.md
dz-modules/dz-modules/: README.md
evaluate/: README.md  suite.json  suite_firstproof.json  suite_firstproof_gemini2_p4_p6.json  suite_firstproof_gemini_p4_p6.json  suite_firstproof_gpt_p4_p6.json  suite_firstproof_opus_p4_p6.json  suite_firstproof_sonnet_p4_p6.json  suite_hubbard_gemini.json  suite_hubbard_opus.json
lean_workspace/: Makefile
lean_workspace/Discovery/: Discovery.lean
libs/graph_ir/: storage_converter.py  typst_compiler.py
libs/inference/: factor_graph.py
libs/inference_v2/: __init__.py  engine.py  factor_graph.py
libs/storage/: config.py  lance_content_store.py  vector_store.py
scripts/: monitor_runs.py  run_benchmark_suite.py  setup_lean_full.sh
skills/: lean_proof.skill.md  plausible_reasoning.skill.md
src/discovery_zero/: __init__.py  benchmark.py  cli.py  config.py  inference.py  ingest.py  models.py  persistence.py  strategy.py
src/gaia_bp/: __init__.py  bp.py  engine.py  exact.py  factor_graph.py  gbp.py  junction_tree.py  potentials.py
tests/: test_benchmark.py  test_cli.py  test_e2e.py  test_inference.py  test_ingest.py  test_lean.py  test_llm_streaming.py  test_models.py  test_persistence.py  test_strategy.py
(+167 files in other folders)
