[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discovery-zero"
version = "0.1.0"
description = "Self-directed mathematical discovery via reasoning hypergraph"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
dz = "discovery_zero.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/discovery_zero"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
