[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discovery-zero"
version = "0.2.0"
description = "Self-directed mathematical discovery via reasoning hypergraph"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "typer[all]>=0.12",
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "jsonschema>=4.0",
]
dl = [
    "torch>=2.0",
]

[project.scripts]
dz = "discovery_zero.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/discovery_zero"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "llm: tests that require real LLM endpoint credentials",
    "lean: tests that require Lean toolchain/runtime",
]
